--- a/app/views/export.scala.html
+++ b/app/views/export.scala.html
@@ -1,46 +1,6 @@
 @(dates: Seq[String], mode: String)
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Store</title>
-    <link rel="stylesheet" href="https://bootswatch.com/3/yeti/bootstrap.css">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.min.css">
-</head>
-<body>
-<div class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a href="scan" class="navbar-brand">Student Store</a>
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav">
-                <li><a href="/manageProducts">Manage Products</a></li>
-                <li><a href="/manageBarcodes">Manage Barcodes</a></li>
-                <li><a href="/managePurchases">Manage Purchases</a></li>
-                <li><a href="/export">Export</a></li>
-            </ul>
-            <form action="/switchMode" method="POST" class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input name="mode" type="text" class="form-control" value="@mode">
-                </div>
-                <button type="submit" class="btn btn-default">Switch</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="/logout">Logout</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-<div class="container">
+@mainAuth(mode) {
     <div class="page-header">
         <div class="row">
             <h1>Export Data</h1>
@@ -54,9 +14,9 @@
 
                 <div class="col-lg-10">
                     <select class="form-control" id="date" name="date">
-                        @dates.map { d =>
+                    @dates.map { d =>
                         <option>@d</option>
-                        }
+                    }
                     </select>
                 </div>
             </div>
@@ -67,8 +27,4 @@
             </div>
         </fieldset>
     </form>
-</div>
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="https://bootswatch.com/3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+}
