--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,46 +1,10 @@
 @(totalPurchases: Double, purchases: Seq[Purchase], mode: String)(implicit flash: Flash)
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Store</title>
-    <link rel="stylesheet" href="https://bootswatch.com/3/yeti/bootstrap.css">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.min.css">
-</head>
-<body>
-<div class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a href="scan" class="navbar-brand">Student Store</a>
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav">
-                <li><a href="/manageProducts">Manage Products</a></li>
-                <li><a href="/manageBarcodes">Manage Barcodes</a></li>
-                <li><a href="/managePurchases">Manage Purchases</a></li>
-                <li><a href="/export">Export</a></li>
-            </ul>
-            <form action="/switchMode" method="POST" class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input name="mode" type="text" class="form-control" value="@mode">
-                </div>
-                <button type="submit" class="btn btn-default">Switch</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="/logout">Logout</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-<div class="container">
+@extraBody = {
+    <script>document.getElementById("barcode").focus();</script>
+}
+
+@mainAuth(mode, extraBody = extraBody) {
     <div class="page-header">
         <div class="row">
             <h1>Add purchases</h1>
@@ -85,16 +49,12 @@
         </thead>
         <tbody>
         @purchases.map { purchase =>
-        <tr>
-            <td>@purchase.product.name</td>
-            <td>@purchase.quantity</td>
-        </tr>
+            <tr>
+                <td>@purchase.product.name</td>
+                <td>@purchase.quantity</td>
+            </tr>
         }
         </tbody>
     </table>
 </div>
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="https://bootswatch.com/3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script>document.getElementById("barcode").focus();</script>
-</body>
-</html>
+}
