--- a/app/views/loginPage.scala.html
+++ b/app/views/loginPage.scala.html
@@ -1,60 +1,48 @@
 @()
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Store</title>
-    <link rel="stylesheet" href="https://bootswatch.com/3/yeti/bootstrap.css">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.min.css">
-</head>
-<body>
-<div class="navbar navbar-default navbar-fixed-top">
+@main() {
+    <div class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="scan" class="navbar-brand">Student Store</a>
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
-        <div class="navbar-header">
-            <a href="scan" class="navbar-brand">Student Store</a>
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+        <div class="page-header">
+            <div class="row">
+                <h1>Login</h1>
+            </div>
         </div>
-    </div>
-</div>
-<div class="container">
-    <div class="page-header">
-        <div class="row">
-            <h1>Login</h1>
-        </div>
-    </div>
-    <form action="/login" method="POST" class="form-horizontal">
-        <fieldset>
-            <div class="form-group">
-                <label for="user" class="col-lg-2 control-label">Username</label>
+        <form action="/login" method="POST" class="form-horizontal">
+            <fieldset>
+                <div class="form-group">
+                    <label for="user" class="col-lg-2 control-label">Username</label>
 
-                <div class="col-lg-10">
-                    <input class="form-control" id="user" name="user" placeholder="Username">
+                    <div class="col-lg-10">
+                        <input class="form-control" id="user" name="user" placeholder="Username">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-lg-2 control-label">Password</label>
+                <div class="form-group">
+                    <label for="password" class="col-lg-2 control-label">Password</label>
 
-                <div class="col-lg-10">
-                    <input required type="password" class="form-control" id="password" name="password"
-                           placeholder="Password">
+                    <div class="col-lg-10">
+                        <input required type="password" class="form-control" id="password" name="password"
+                            placeholder="Password">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-lg-10 col-lg-offset-2">
-                    <button type="submit" class="btn btn-primary" value="Login">Login</button>
+                <div class="form-group">
+                    <div class="col-lg-10 col-lg-offset-2">
+                        <button type="submit" class="btn btn-primary" value="Login">Login</button>
+                    </div>
                 </div>
-            </div>
-        </fieldset>
-    </form>
-</div>
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="https://bootswatch.com/3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+            </fieldset>
+        </form>
+    </div>
+}
